single announce ment alignement bug fixed

--- a/src/asset/css/announcement.css
+++ b/src/asset/css/announcement.css
@@ -18,3 +18,8 @@
     font-weight: 300;
     color: #5a6268;
 }
+
+.alignLeft{
+    text-align: left !important;
+    white-space: pre-line;
+}
